# intake

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/events/: cache.rs  collection.rs  errors.rs  mod.rs  schema.rs  segment.rs  terminator.rs
src/source/: mod.rs
src/source/postgresql/: errors.rs  event.rs  mod.rs  state.rs
src/storage/: mod.rs
