[package]
name = "intake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
parquet = { git = "https://github.com/apache/arrow-rs" }
arrow = { git = "https://github.com/apache/arrow-rs" }
async-trait = "0.1.53"
env_logger = "0.9.0"
yaml-rust = "0.4"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.2"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.2", features = ["v4", "fast-rng"] }

[dependencies.tokio-postgres]
git = "https://github.com/MaterializeInc/rust-postgres.git"